# FarPostParser

./: README.md  build.sh  db.sqlite3  manage.py  pyproject.toml
FarPostParser/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
far_post_parser/: asgi.py  settings.py  urls.py  wsgi.py
